<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.meal.MealFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mealLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/arrow_back_ios_new_24px"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageButton
                    android:id="@+id/watch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/button_background"
                    android:contentDescription="@string/youtube_watch_button"
                    android:src="@drawable/play_arrow_24px"
                    app:layout_constraintEnd_toStartOf="@id/save"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageButton
                    android:id="@+id/save"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_background"
                    android:contentDescription="@string/save_meal_button"
                    android:src="@drawable/bookmark_state"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/itemImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/meal_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_24px" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <TextView
                        android:id="@+id/itemTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/title"
                        android:textColor="@color/text"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/itemCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/category"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/itemArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/area"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/card_bg"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/instructions"
                        android:textColor="@color/text"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/itemInstructions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/instructions_description"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>